--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,53 @@ body {
 div {
     border: 1px solid Chocolate;
 }
+
+nav {
+  width: 100%;
+  padding: 1.0em;
+}
+
+.nav-container{
+  position: fixed;
+  width: 100%;
+  margin: -20px;
+  padding-top: 17.5px;
+  padding-left: 30px;
+}
+
+.nav-logo {
+  width: 40%;
+  margin: 0em auto 0em auto;
+  float: left;
+}
+
+.logo {
+  width: 26px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.nav-links {
+  width: 59%;
+  margin: 0em auto 0em auto;
+  float: left;
+}
+
+.nav-links ul {
+  padding-left: 8.5em;
+}
+
+.nav-links li {
+  display: inline-block;
+  padding: 0em 1em 0em 1em;
+}
+
+.intro {
+  display: block;
+  background-image: url('../img/first-background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 750px;
+  margin-top: -60px;
+}
