finished page, still need to tweak css

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 
 
 body {
-    background-color: LightGray;
+    background-color: white;
 }
-div {
+/*div {
     border: 1px solid Chocolate;
-}
+}*/
 
 nav {
   width: 100%;
@@ -108,21 +108,70 @@ nav {
 }
 
 .middle {
+  margin-top: 2.0em;
   text-align: center;
   font-weight: lighter;
-
+  font-size: 2.5em;
+  padding-bottom: 2em;
 }
 
-.middle h1 {
-}
 
 .middle li {
   display: inline-block;
-
+  margin-left: 1.2em:;
+  margin-right: 1.5em;
 }
 
+.middle-info  {
+  font-weight: lighter;
+  font-size: 0.6em;
+  position: center;
+}
 
+.footer {
+  border-top: 1px black solid;
+}
 
+.footer-content {
+  width: 55em;
+  padding-bottom: 8em;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  border-top: 1px #eaebec solid;
+}
+
+.footer-content ul {
+  margin-left: -2.5em;
+  margin-right: auto;
+}
+
+.footer-content li {
+  display: inline-block;
+  border: 1px #eaebec solid;
+  width: 1.0em;
+  border-radius: 50%;
+  padding: 0.7em;
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+}
+
+.fa-twitter {
+  color: #00B6F1;
+}
+
+.fa-facebook {
+  color: #3b5998;
+}
+
+.fa-instagram {
+  color: #2A5B83;
+}
+
+.copyright {
+  font-weight: lighter;
+  color: #838994;
+}
 
 
 
