--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ nav {
   height: 3.0em;
   z-index: 10;
   position: fixed;
+  font-family: 'Roboto';
 }
 
 .nav-container{
@@ -86,6 +87,7 @@ nav {
   background-image: url('../img/first-background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: 0 bottom;
   margin-left: -1.9em;
   z-index: -2; 
 }
