--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 
 body {
     background-color: white;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 /*
@@ -46,7 +48,7 @@ nav {
 
 .nav-links {
   width: 50%;
-  margin: -0.3em auto 0em -3.3em;
+  margin: -0.3em auto 0em -5.0em;
   float: left;
   color: #838994;
   font-weight: 100;
@@ -88,14 +90,14 @@ nav {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 bottom;
-  margin-left: -1.9em;
+  margin-left: -4.0em;
   z-index: -2; 
 }
 
 .intro-content {
   text-align: center;
   position: absolute;
-  top: 34.5%;
+  top: 31.5%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
@@ -103,7 +105,7 @@ nav {
 }
 
 .intro-content h1 {
-  font-size: 3em;
+  font-size: 3.1em;
   font-weight: 100;
   margin-bottom: -0.2em;
   padding-top: 70px;
@@ -113,7 +115,7 @@ nav {
 }
 
 .intro-content h3 {
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-weight: 100;
   padding: 0;
 }
@@ -122,14 +124,14 @@ nav {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 8em;
+  width: 7.0em;
   background-color: #F15A29;
   color: white;
   text-decoration: none;
   padding: 1em;
   margin-top: 1.0em;
-  border-radius: 0.3em;
-  font-size: 1.0em;
+  border-radius: 0.2em;
+  font-size: 1.1em;
   letter-spacing: 0.05em;
   font-weight: lighter;
   z-index: -1;
@@ -150,7 +152,7 @@ nav {
 .middle {
   margin-top: 3.0em;
   text-align: center;
-  font-weight: lighter;
+  font-weight: 300;
   font-size: 2.5em;
   padding-bottom: 2em;
 }
@@ -163,7 +165,7 @@ nav {
 }
 
 .middle-info  {
-  font-weight: lighter;
+  font-weight: 300;
   font-size: 0.6em;
   position: center;
 }
